--- a/login.html
+++ b/login.html
@@ -1,43 +1,165 @@
+<!DOCTYPE html>
 <html>
 <head>
- <title>Login page</title>
+  <title>Login Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: url('https://images.pexels.com/photos/262047/pexels-photo-262047.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 20px;
+    }
+
+    .form-box {
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 30px 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 450px;
+    }
+
+    .form-box h1 {
+      text-align: center;
+      margin-bottom: 25px;
+      font-size: 2rem;
+      color: #333;
+    }
+
+    label {
+      font-weight: bold;
+      margin-top: 15px;
+      display: block;
+      color: #444;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    button,
+    input[type="reset"] {
+      padding: 10px 20px;
+      border: none;
+      background-color: #28a745;
+      color: white;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    button:hover,
+    input[type="reset"]:hover {
+      background-color: #218838;
+    }
+
+    .otp-button {
+      background-color: #007bff;
+    }
+
+    .otp-button:hover {
+      background-color: #0056b3;
+    }
+
+    .nav-home {
+      display: block;
+      text-align: center;
+      margin-top: 20px;
+      text-decoration: none;
+      background-color: #ffc107;
+      padding: 10px;
+      border-radius: 6px;
+      color: black;
+      font-weight: bold;
+    }
+
+    .nav-home:hover {
+      background-color: #e0a800;
+    }
+
+    @media (max-width: 500px) {
+      .form-box {
+        padding: 20px 15px;
+      }
+
+      button,
+      input[type="reset"] {
+        width: 100%;
+        margin-top: 8px;
+      }
+
+      .otp-button {
+        width: 100%;
+        margin-top: 8px;
+      }
+    }
+  </style>
 </head>
-<body style="background-image: url('https://laduree-laduree-fr-storage.omn.proximis.com/Imagestorage/imagesSynchro/0/0/035ca3de2d7c6ada9d65a30c5df192c7b3a1dcb3_store_store-x5_1.jpg'); background-repeat: no-repeat; 
-background-size: 100%; color:black; margin-top: 1.33%;">
-<center><h1 style="background-color: white; width:8%">Sign up</h1></center>
- <p><h2>Enter your details</h2></p><br>
-   <form>
-     <label>First name:</label><br><input type="text" ><br>
-     <label >Last name:</label><br><input type="text" ><br>
-     <label >Phone number:</label><br><input type="text" maxlength="10" >&nbsp;&nbsp;&nbsp;<button onclick="verify()">Get OTP</button><br>
-     <label>Enter OTP:</label><br><input type="text" maxlength="6" >&nbsp;&nbsp;&nbsp;<button onclick="OTP()">Verify OTP</button><br>
-     <label>Home Address:</label><br><input type="text" ><br>
-     <label>Username:</label><br><input type="text"><br>
-     <label>Password:</label><br><input type="password" minlength="6"><br><br>
+<body>
+  <div class="form-box">
+    <h1>Sign Up</h1>
+    <form onsubmit="validate(); return false;">
+      <label>First Name:</label>
+      <input type="text" required>
 
-     <button onclick="validate()">Submit</button>&nbsp;&nbsp;&nbsp;<input type="Reset" value="Reset">
-   </form><br>
-   
-<script>
-  function validate()
-  {
-    alert('Login Successful');
-    result_text.innerHTML = "Login Successfull!!!, Enjoy The Meal";
-  }
-  function verify()
-  {
-    alert('OTP sent successfully')
+      <label>Last Name:</label>
+      <input type="text" required>
 
-  }
-  function OTP()
-  
-  {
-    alert('Verified')
-  }
+      <label>Phone Number:</label>
+      <input type="text" maxlength="10" required>
+      <button type="button" class="otp-button" onclick="verify()">Get OTP</button>
 
-</script>
+      <label>Enter OTP:</label>
+      <input type="text" maxlength="6">
+      <button type="button" class="otp-button" onclick="OTP()">Verify OTP</button>
 
- <a href="home.html"><h4 style="background-color: white; width:8%">Go to Home Page</h4></a>
+      <label>Home Address:</label>
+      <input type="text" required>
 
+      <label>Username:</label>
+      <input type="text" required>
+
+      <label>Password:</label>
+      <input type="password" minlength="6" required>
+
+      <button type="submit">Submit</button>
+      <input type="reset" value="Reset">
+    </form>
+
+    <a href="home.html" class="nav-home">Go to Home Page</a>
+  </div>
+
+  <script>
+    function validate() {
+      alert('Login Successful');
+    }
+    function verify() {
+      alert('OTP sent successfully');
+    }
+    function OTP() {
+      alert('OTP Verified');
+    }
+  </script>
 </body>
 </html>
